remove some sql query
